--- a/libs/flutter/characters/pubspec.yaml
+++ b/libs/flutter/characters/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_modular: ^5.0.3
+  flutter_api:
+    path: ../api
 
 dev_dependencies:
   flutter_test:
