--- a/apps/flutter/suflex/pubspec.yaml
+++ b/apps/flutter/suflex/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_modular: ^5.0.3
+  flutter_mobx: ^2.0.6+4
+  mobx: ^2.1.1
   flutter_characters:
     path: ../../../libs/flutter/characters
   flutter_api:
