fix(characters): adjust detail page

--- a/apps/flutter/suflex/pubspec.yaml
+++ b/apps/flutter/suflex/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_modular: ^5.0.3
   flutter_mobx: ^2.0.6+4
   mobx: ^2.1.1
+  intl: ^0.17.0
   flutter_characters:
     path: ../../../libs/flutter/characters
   flutter_api:
