--- a/libs/flutter/characters/pubspec.yaml
+++ b/libs/flutter/characters/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_svg: ^1.1.5
   flutter_mobx: ^2.0.6+4
   mobx: ^2.1.1
+  intl: ^0.17.0
   flutter_api:
     path: ../api
 
