--- a/libs/flutter/episodes/pubspec.yaml
+++ b/libs/flutter/episodes/pubspec.yaml
@@ -21,6 +21,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  build_runner: ^2.2.1
+  mobx_codegen: ^2.0.7+2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
