feat(shared): create lib

--- a/apps/flutter/suflex/pubspec.yaml
+++ b/apps/flutter/suflex/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
     path: ../../../libs/flutter/episodes
   flutter_api:
     path: ../../../libs/flutter/api
+  flutter_shared:
+    path: ../../../libs/flutter/shared
 
 
   # The following adds the Cupertino Icons font to your application.
