--- a/apps/flutter/suflex/pubspec.yaml
+++ b/apps/flutter/suflex/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   mobx: ^2.1.1
   intl: ^0.17.0
   shared_preferences: ^2.0.15
+  skeletons: ^0.0.3
   flutter_characters:
     path: ../../../libs/flutter/characters
   flutter_episodes:
