--- a/libs/flutter/characters/pubspec.yaml
+++ b/libs/flutter/characters/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_mobx: ^2.0.6+4
   mobx: ^2.1.1
   intl: ^0.17.0
+  skeletons: ^0.0.3
   flutter_api:
     path: ../api
   flutter_shared:
