ci(core): create job lint

--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -34,3 +34,20 @@ jobs:
       - name: Install deps
         if: steps.cache-node-modules.cache-hit != 'true'
         run: npm install
+
+  lint:
+    needs: prepare
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: cache node_modules
+        uses: actions/cache@v2
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-build-node-modules-cache-${{ hashFiles('package-lock.json') }}
+        
+      - name: lint affected
+        run: npx nx affected:lint --base=origin/main
