--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -35,7 +35,7 @@ jobs:
         if: steps.cache-node-modules.cache-hit != 'true'
         run: npm install
 
-  lint:
+  analyze:
     needs: prepare
     runs-on: ubuntu-latest
     steps:
@@ -49,5 +49,5 @@ jobs:
           path: '**/node_modules'
           key: ${{ runner.os }}-build-node-modules-cache-${{ hashFiles('package-lock.json') }}
         
-      - name: lint affected
-        run: npx nx affected:lint --base=origin/main
+      - name: analyze all
+        run: npx nx run-many --target=analyze --all=true 
