--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -58,9 +58,11 @@ jobs:
           path: '**/node_modules'
           key: ${{ runner.os }}-build-node-modules-cache-${{ hashFiles('package-lock.json') }}
         
-      - uses: actions/checkout@v3
-      - uses: subosito/flutter-action@v2
+      - name: Cache Flutter dependencies
+        uses: actions/cache@v2
         with:
-          flutter-version: '3.0.5'
-          channel: 'stable'
-      - run: flutter --version
+          path: /opt/hostedtoolcache/flutter
+          key: 'flutter-:os:-:channel:-:version:-:arch:-:hash:'
+      - uses: subosito/flutter-action@v2
+      - name: Install dependencies
+        run: flutter pub get
