--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -64,5 +64,5 @@ jobs:
           path: /opt/hostedtoolcache/flutter
           key: 'flutter-:os:-:channel:-:version:-:arch:-:hash:'
       - uses: subosito/flutter-action@v2
-      - name: Install dependencies
-        run: flutter pub get
+        with:
+            channel: 'stable'
