--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -64,4 +64,6 @@ jobs:
           key: ${{ runner.os }}-flutter
       - uses: subosito/flutter-action@v2
         with:
-            channel: 'stable'
+          channel: 'stable'
+      - name: Flutter analyze
+        run: npx nx run-many --target=analyze --all=true
