--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -67,3 +67,4 @@ jobs:
           channel: 'stable'
       - name: Flutter analyze
         run: npx nx run-many --target=analyze --all=true
+        run: npx nx run-many --target=format --all=true
