--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -72,4 +72,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: appbundle
-          path: apps/flutter/suflex/build\app\outputs\bundle\release\app-release.aab
+          path: apps/flutter/suflex/build/app/outputs/bundle/release/app-release.aab
