--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -8,10 +8,6 @@ on:
 jobs:
   prepare:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: true
-      matrix:
-        node-version: [16.16.0]
     steps:
       - uses: actions/checkout@v3
         with:
@@ -41,6 +37,8 @@ jobs:
           channel: 'stable'
           cache-key: ${{ runner.os }}-flutter
           architecture: x64
+          flutter-version: '3.0.5'
+
       - run: flutter --version
 
   build_appbundle:
