--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -37,8 +37,6 @@ jobs:
           channel: 'stable'
           cache-key: ${{ runner.os }}-flutter
           architecture: x64
-          flutter-version: '3.0.5'
-
       - run: flutter --version
 
   analyze:
@@ -60,7 +58,9 @@ jobs:
         with:
           path: /opt/hostedtoolcache/flutter
           key: ${{ runner.os }}-flutter
-          
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
       - name: Flutter analyze
         run: npx nx run-many --target=analyze --all=true
       - name: Flutter format
@@ -85,6 +85,8 @@ jobs:
         with:
           path: /opt/hostedtoolcache/flutter
           key: ${{ runner.os }}-flutter
-
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
       - name: Flutter test
         run: npx nx run-many --target=test --all=true --exclude=flutter-api,flutter-episodes,flutter-characters,flutter-suflex
