fix(app): adjust routes

--- a/apps/flutter/suflex/pubspec.yaml
+++ b/apps/flutter/suflex/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
     path: ../../../libs/flutter/episodes
   flutter_shared:
     path: ../../../libs/flutter/shared
+  flutter_splash:
+    path: ../../../libs/flutter/splash
 
 
   # The following adds the Cupertino Icons font to your application.
