docs(core): update readme dep graph

--- a/apps/flutter/suflex/project.json
+++ b/apps/flutter/suflex/project.json
@@ -3,7 +3,7 @@
   "name": "flutter-suflex",
   "sourceRoot": "apps/flutter/suflex/src",
   "projectType": "application",
-  "implicitDependencies": ["flutter-characters", "flutter-episodes"],
+  "implicitDependencies": ["flutter-characters", "flutter-episodes", "flutter-splash"],
   "targets": {
     "analyze": {
       "executor": "@nrwl/workspace:run-commands",
