--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "nx": "14.8.6",
     "prettier": "^2.6.2",
     "typescript": "~4.8.2"
+  },
+  "dependencies": {
+    "@octokit/core": "^4.1.0"
   }
 }
