--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -14,12 +14,12 @@ jobs:
         with:
           fetch-depth: 0
       
-      # - name: cache node_modules
-      #   id: cache-node-modules
-      #   uses: actions/cache@v2
-      #   with:
-      #     path: '**/node_modules'
-      #     key: ${{ runner.os }}-build-node-modules-cache-${{ hashFiles('package-lock.json') }}
+      - name: cache node_modules
+        id: cache-node-modules
+        uses: actions/cache@v2
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-build-node-modules-cache-${{ hashFiles('package-lock.json') }}
       
       - name: Use Node ${{ matrix.node-version }}
         uses: actions/setup-node@v1
