--- a/apps/flutter/rick-morty/pubspec.yaml
+++ b/apps/flutter/rick-morty/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_modular: ^5.0.3
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -87,3 +88,6 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+  assets:
+    - assets/illustrations/
+    - assets/lottiefiles/
