--- a/libs/flutter/characters/project.json
+++ b/libs/flutter/characters/project.json
@@ -3,7 +3,7 @@
   "name": "flutter-characters",
   "sourceRoot": "libs/flutter/characters/src",
   "projectType": "library",
-  "implicitDependencies": ["flutter-api", "flutter-shared"],
+  "implicitDependencies": ["flutter-commons", "flutter-shared"],
   "targets": {
     "analyze": {
       "executor": "@nrwl/workspace:run-commands",
