ci(core): adjust CI and CD

--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -15,28 +15,28 @@ jobs:
       
       - name: cache node_modules
         id: cache-node-modules
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: '**/node_modules'
           key: ${{ runner.os }}-build-node-modules-cache-${{ hashFiles('package-lock.json') }}
       
-      - name: Use Node ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+      - name: Use Node 16
+        uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
-
-      - run: git fetch --no-tags --prune --depth=5 origin main
+          node-version: 16
       
       - name: Install deps
         if: steps.cache-node-modules.cache-hit != 'true'
         run: npm install
 
-      - name: Install Flutter
-        uses: subosito/flutter-action@v2
+      - name: Cache Flutter dependencies
+        uses: actions/cache@v3
         with:
-          channel: 'stable'
-          cache-key: ${{ runner.os }}-flutter
-          architecture: x64
+          path: /opt/hostedtoolcache/flutter
+          key: ${{ runner.OS }}-flutter-install-cache-${{ env.FLUTTER_VERSION }}
+      - uses: subosito/flutter-action@v2
+        with:
+          flutter-version: ${{ env.FLUTTER_VERSION }}
       - run: flutter --version
 
   build_appbundle:
@@ -49,23 +49,25 @@ jobs:
           fetch-depth: 0
 
       - name: cache node_modules
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: '**/node_modules'
           key: ${{ runner.os }}-build-node-modules-cache-${{ hashFiles('package-lock.json') }}
         
       - name: Cache Flutter dependencies
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: /opt/hostedtoolcache/flutter
-          key: ${{ runner.os }}-flutter
+          key: ${{ runner.OS }}-flutter-install-cache-${{ env.FLUTTER_VERSION }}
       - uses: subosito/flutter-action@v2
         with:
-          channel: 'stable'
+          flutter-version: ${{ env.FLUTTER_VERSION }}
+
       - name: Flutter appbundle
-        run: npx nx run flutter-suflex:build-appbundle
+        run: npx nx run flutter-rick-morty:build-appbundle
+
       - name: Upload appbundle
         uses: actions/upload-artifact@v3
         with:
           name: appbundle
-          path: apps/flutter/suflex/build/app/outputs/bundle/release/app-release.aab
+          path: apps/flutter/rick-morty/build/app/outputs/bundle/release/app-release.aab
