--- a/apps/flutter/rick-morty/pubspec.yaml
+++ b/apps/flutter/rick-morty/pubspec.yaml
@@ -92,4 +92,5 @@ flutter:
   # see https://flutter.dev/custom-fonts/#from-packages
   assets:
     - assets/illustrations/
+    - assets/images/
     - assets/lottiefiles/
